Removed ruff and mypy from precommit checks for now

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,15 +19,15 @@ repos:
     hooks:
       - id: isort
         name: isort
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.292
-    hooks:
-      - id: ruff
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.1
-    hooks:
-      - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
+#  - repo: https://github.com/charliermarsh/ruff-pre-commit
+#    rev: v0.0.292
+#    hooks:
+#      - id: ruff
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.5.1
+#    hooks:
+#      - id: mypy
+#        args: [--no-strict-optional, --ignore-missing-imports]
   - repo: https://github.com/lyz-code/yamlfix/
     rev: 1.13.0
     hooks:
