--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
-
 [project]
 name = "sdebridge"
 version = "0.0.1"
@@ -23,9 +22,11 @@ classifiers = [
 ]
 
 dependencies = [
-    "jax",
+    "jax[cpu]",
+    "matplotlib",
+    "flax",
+    "orbax",
 ]
-
 
 [project.optional-dependencies]
 examples = [
@@ -41,19 +42,11 @@ format =[
     "isort",
     "black",
 ]
+full = ["sdebridge[examples]", "sdebridge[test]", "sdebridge[lint]", "sdebridge[format]"]
 
 
 [project.urls]
 "Homepage" = "https://github.com/libbylbaker/sdebridge"
-
-
-[tool.ruff]
-include = ["*.py", "**/pyproject.toml", "*.ipynb"]
-# See: https://beta.ruff.rs/docs/rules/
-
-
-[tool.ruff.pydocstyle]
-convention = "numpy"
 
 
 [tool.isort]
